# future-stone

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  BRANCHING.md  CONSTITUTION.md  DESIGN.md  DEVELOPMENT.md  LICENSE  README.md  package.json  pnpm-lock.yaml
apps/studio-web/: index.html  package.json  vite.config.js
apps/studio-web/src/: App.vue  styles.css
configs/: config.yaml.demo
docs/decisions/: ADR-0001-record-architecture-decisions.md
docs/design/active/: design_doc-v0.0.1-bootstrap.md
docs/governance/: changelog.md  folder-declaration-v0.md  terminology-glossary.md
docs/memory-bank/: active-context.md  brief.md  patterns.md  tech-context.md
docs/prompts/: README.md
docs/requirements/: requirements-v0.0.1.md
docs/superpowers/plans/: 2026-06-13-future-stone-bootstrap.md
scripts/: bootstrap_dev_env.sh
services/backend-api/: pyproject.toml
services/backend-api/app/: __init__.py  main.py
services/backend-api/app/modules/simulation/: __init__.py  generation.py  llm_client.py  repository.py  schemas.py  simulation_loop.py  skill_runner.py  use_cases.py
services/backend-api/tests/: test_api.py  test_simulation_loop.py
